--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@types/node": "^16.11.39",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "@types/react-transition-group": "^4.4.4",
     "nodejs-unique-numeric-id-generator": "^1.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.2",
     "short-id": "^0.1.0-1",
     "shortid": "^2.2.16",
     "typescript": "^4.7.3",
